# coman

./: CHANGELOG.md  Makefile  README.md  __init__.py  docker-compose.yml  pyproject.toml  requirements.txt  run_coman.bat  run_coman.sh  start_linux.txt  start_windows.txt
.github/workflows/: ci.yml
coman/: __init__.py  version.py
coman/core/: __init__.py
coman/modules/: __init__.py
core/: app.py  base_module.py  config.py  logger.py  registry.py  scheduler.py
core/messages/: __init__.py  base.py  integration.py  manager.py  (+1 more)
data/: capabilities.json  integrations.json  logic.db  tools.json  vulnerabilities.json
docs/: observability.md  system_audit.md
fastapi/: __init__.py  app.py  exceptions.py  params.py  responses.py  routing.py  testclient.py
modules/: .env.example  Dockerfile  README.md  main.py  requirements.txt
observability/: __init__.py  otel-collector.yaml  tracing.py
pydantic/: __init__.py
scripts/: capture_logs.py
telegram/: README.md  __init__.py  main.py  requirements.txt
tests/: conftest.py  sample_integration.py  test_analysis_openapi_contract.py  test_base_module_utilities.py  test_config_settings.py  test_core_app.py  test_core_logger.py  test_core_registry.py  test_core_scheduler.py  test_dependency_checks.py  test_fastapi_stub.py  test_integration_module.py  test_manager_module.py  test_manager_text_integration.py  test_messages_base.py  test_messages_manager_models.py  test_module_runner.py  test_observability_tracing.py  test_telegram_module.py  test_telegram_module_runner.py  test_text_openapi_contract.py  test_ui_mount.py
(+37 files in other folders)
